# intel-quant-dialect

./: conv2d.txt
include/mlir/Dialect/: CMakeLists.txt
include/mlir/Dialect/FxpMathOps/: FxpMathOps.td
include/mlir/Dialect/IntelQuantOps/: CMakeLists.txt  IntelQuantOps.h  IntelQuantOps.td  Passes.h
include/mlir/Quantizer/Configurations/: IntelQuantConfig.h
include/mlir/Quantizer/Transforms/: Passes.h
lib/Dialect/: CMakeLists.txt
lib/Dialect/IntelQuantOps/: CMakeLists.txt
lib/Dialect/IntelQuantOps/IR/: DialectRegistration.cpp  IntelQuantOps.cpp
lib/Dialect/IntelQuantOps/Transforms/: LowerUniformRealMath.cpp  UniformKernelUtils.h
lib/Quantizer/: CMakeLists.txt
lib/Quantizer/Configurations/: FxpMathConfig.cpp  IntelQuantConfig.cpp
lib/Quantizer/Transforms/: Conv2DFusionPass.cpp  Conv2DFusionPass.td  InferQuantizedTypesIntelPass.cpp
test/Quantizer/: conv2d.mlir  conv2d_fusion.mlir
tools/mlir-opt/: CMakeLists.txt
